<?xml version="1.0"?>
<package format="2">
  <name>calibrate_lidars</name>
  <version>1.0.0</version>
  <description>
    TODO calibrate_lidars description
  </description>

  <author email="linh.nguyen@enway.ai">Linh Nguyen</author>
  <maintainer email="linh.nguyen@enway.ai">Linh Nguyen</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>safety_compile_flags</build_depend>

  <depend>enway_helper</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>fast_gicp</depend>
  <depend>ndt_omp</depend>
</package>
